修正图片链接路径问题

--- a/Documents/申请创建新设备与发布临时流程说明.md
+++ b/Documents/申请创建新设备与发布临时流程说明.md
@@ -1,32 +1,33 @@
 因为HiLink的IT流程正在完善中，所以使用GitHub的Discussions讨论流程来做新智能设备的基本信息申请和发布流程。日后，在HiLink的IT体系完成后，会将这个流程迁移到新的IT流程中，更好、更简便地为合作伙伴和第三方开发者服务。
 
 [HUAWEI HiLink EcoSystem](https://github.com/HUAWEI-HiLink)
-![huawei_hilink_github](/assets/huawei_hilink_github.png)
 
-从下面这个Teams入口进入到合作伙伴的团队界面，可以看到华为为每个合作伙伴创建的团队信息。
-![HiLink_team](/assets/HiLink_team.png)
-在下面的Patners内，有所有合作团队列表。
+![huawei_hilink_github](./assets/huawei_hilink_github.png)
+
+从下面这个Teams入口进入到合作伙伴的团队界面，可以看到华为为每个合作伙伴创建的团队信息。
+![HiLink_team](./assets/HiLink_team.png)
+在下面的Patners内，有所有合作团队列表。
 点击团队后面的Members，可以看到对应的团队列表。
-![Partners_list](/assets/Partners_list.png)
+![Partners_list](./assets/Partners_list.png)
 
 点击团队名称，可以进入到团队的界面。
-![new_request](/assets/new_request.png)
+![new_request](./assets/new_request.png)
 
-默认会进入到Discussions列表中。通常情况下，华为HiLink团队成员会创建一个Discussion，然后将申请模板放入到议题正文。并指定合作伙伴帐号关注此议题。这样在未来可以及时通过这个账号的Email接收到议题出现答复、变更时的通知。
+默认会进入到Discussions列表中。通常情况下，华为HiLink团队成员会创建一个Discussion，然后将申请模板放入到议题正文。并指定合作伙伴帐号关注此议题。这样在未来可以及时通过这个账号的Email接收到议题出现答复、变更时的通知。
 
-![partner_reply](/assets/partner_reply.png)
+![partner_reply](./assets/partner_reply.png)
 合作伙伴通过在这个议题下回复相关的新设备信息即可。
 也可以通过@来添加其他关注人。可以使华为HiLink团队成员，也可以是其他的。
 
-完成这个步骤后，华为HiLink团队会第一时间审核并分配产品ID、BI Key等必要的开发数据。（未来，IT系统完善后，这个步骤将成为自动化审核过程，基本不需要等待）
+完成这个步骤后，华为HiLink团队会第一时间审核并分配产品ID、BI Key等必要的开发数据。（未来，IT系统完善后，这个步骤将成为自动化审核过程，基本不需要等待）
 
 如果在答复、讨论过程，需要附带其他非文本附件，可以先上传到自己账户的仓库下，然后将URL链接插入到Reply中。
-![reply_with_link](/assets/reply_with_link.png)
+![reply_with_link](./assets/reply_with_link.png)
 
 如果在答复中，需要插入图片，则可以通过拖放，或者点击『Selecting them』从本地上传图片信息。
-![Replay_upload_pic](/assets/Replay_upload_pic.png)
-
-最后显示结果如下
-![replay_with_pic](/assets/replay_with_pic.png)
+![Replay_upload_pic](./assets/Replay_upload_pic.png)
 
-当合作伙伴将智能设备开发和测试完成后，相同的，利用Discussions创建一个『发布申请』的议题，然后附带上相关的测试报告和Profile定义文件，以及其他相关的文档。华为HiLink团队对这些进行审核后，会通知并发放相关的认证证书。
+最后显示结果如下
+![replay_with_pic](./assets/replay_with_pic.png)
+
+当合作伙伴将智能设备开发和测试完成后，相同的，利用Discussions创建一个『发布申请』的议题，然后附带上相关的测试报告和Profile定义文件，以及其他相关的文档。华为HiLink团队对这些进行审核后，会通知并发放相关的认证证书。
